Small CSS fixes: overflow padding when logged in; footer audience link target size

--- a/web/themes/custom/citizen_dart/components/02-chunks/navigation/footer/_footer.scss
+++ b/web/themes/custom/citizen_dart/components/02-chunks/navigation/footer/_footer.scss
@@ -125,7 +125,7 @@
 			margin-bottom: 7rem;
 			a{
 				font-size: 12px;
-				padding-bottom: 3px;
+				padding:6px 0 3px;
 				@include dottedLink($prefooterLink);
 				&:hover,&:focus{
 					background: none;
